--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -196,7 +196,7 @@
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
                                         <i class="fa-solid fa-coins"></i>
-                                        <p>Budject</p>
+                                        <p>Budget</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
