--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -117,7 +117,7 @@
                                 <img src="https://placehold.co/400" alt="Product Image" class="brand-image img-circle elevation-3">
                             </div>
                             <div class="product-info">
-                                <a href="javascript:void(0)" class="product-title" style="color: black">
+                                <a href="@Url.Action("Edit", "Budget", new{id = budget.Id})" class="product-title" style="color: black">
                                     @budget.Name
                                     <span class="badge badge-primary float-right">RM @budget.Amount</span>
                                 </a>
@@ -144,10 +144,6 @@
                         </li>
                     }
 
-                   
-                 
-                    <!-- /.item -->
-                
                 </ul>
             </div>
             <!-- /.card-body -->
