--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -144,6 +144,10 @@
                         </li>
                     }
 
+                   
+                 
+                    <!-- /.item -->
+                
                 </ul>
             </div>
             <!-- /.card-body -->
