--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,14 +17,14 @@
 
 </head>
 
-<body class="hold-transition sidebar-mini">
+<body  class="hold-transition sidebar-mini">
 <div class="wrapper">
   <!-- Navbar -->
-  <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+        <nav style="background-color:#906494!important;" class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#" role="button" style="color:#fff"><i class="fas fa-bars"></i></a>
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button" style="color:#ECDAFF"><i class="fas fa-bars"></i></a>
       </li>
     
     </ul>
@@ -153,11 +153,11 @@
   <!-- /.navbar -->
 
   <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+        <aside style="background-color:#906494!important;" class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="#" class="brand-link">
                 <img src="https://placehold.co/400" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Weeding Planner</span>
+      <span class="brand-text font-weight-semi-bold" style="font-weight:500; color:white;">Wedding Planner</span>
     </a>
 
     <!-- Sidebar -->
@@ -166,10 +166,23 @@
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
      
         <div class="info">
-                        <span><i class="fa-solid fa-heart"></i></span> <a href="#" class="d-block">Mai & Nas</a>
-        </div>
+                        <span>
+                            <a href="#" style="font-weight:400; color:white;" class="d-block">Mai & Nas</a>
+                           
+                        </span>
+                        <p style="color:white; font-family:'Bradley Hand ITC';">
+                            #MNTillJannah
+                            <i style="font-weight:600; color:white;" class="fa-solid fa-heart"></i>
+                        </p>
+                        <p style="color:white; font-family:'Times New Roman';">
+                            Tarikh Majlis : @DateTime.UtcNow
+                            <br />
+                            Baki Hari     : 270 Days
+                        </p>
+                    </div>
+       
       </div>
-
+          
    
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
@@ -179,13 +192,13 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link ">
                                 <i class="nav-icon fas fa-th"></i>
-                                <p>
-                                    Thing To Do
+                                <p style="font-weight:400; color:white;">
+                                    Things To Do
                                     <i class="fas fa-angle-left right"></i>
                                     <span class="badge badge-info center"><i class="fa-solid fa-heart"></i></span>
                                 </p>
                             </a>
-                            <ul class="nav nav-treeview">
+                            <ul style="font-weight:400; color:white;" class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="@Url.Action("Index", "Dashboard")" class="nav-link">
                                         <i class="fa-solid fa-chart-pie"></i>
@@ -216,7 +229,7 @@
   </aside>
 
   <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper main-content">
+        <div style="background-color:#ECDAFF!important;" class="content-wrapper main-content">
     <!-- Content Header (Page header) -->
    
 
